# todo_core

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: core.pipeline.yml
entrypoints/: fastapi.sh  migrations.sh
src/: main.py
src/alembic/: env.py
src/alembic/versions/: 8b7e8f733d05_create_sheets_and_tasks_models.py  9ea527ab397d_create_sheets_and_tasks_table.py  9f81488524e5_create_lists_and_tasks_models.py  ad298bc801bb_create_sheets_and_tasks_tables.py  bc98873aa3b4_create_sheets_and_tasks_tables.py  db9cabd9bd53_create_sheets_and_tasks_tables.py  e98d1d72f65d_create_sheets_and_tasks_tables.py  f8d4205a3249_create_sheets_tasks_and_statuses_tables.py
src/application/: dependencies.py
src/application/use_cases/: interfaces.py  kafka.py  lists.py  sheets.py  statuses.py  tasks.py
src/domain/entities/: lists.py  sheets.py  statuses.py  tasks.py
src/domain/enums/: action_type.py  sheets.py  tasks.py
src/domain/exceptions/: base.py  lists.py  sheets.py  statuses.py  tasks.py  user.py
src/domain/utils/: task_status.py
src/infrastructure/: config.py
src/infrastructure/managers/: database.py  interfaces.py  kafka.py
src/infrastructure/middlewares/: user.py
src/infrastructure/models/: base.py  lists.py  mixins.py  sheets.py  statuses.py  tasks.py
src/infrastructure/permissions/: base.py  interfaces.py  users.py
src/infrastructure/repositories/: base.py  interfaces.py  (+5 more)
src/presentation/: routers.py
src/tests/: conftest.py  factories.py  test_api.py
(+17 files in other folders)
