[tool.poetry]
name = "auth"
version = "0.1.0"
description = ""
authors = ["NistsiukAlexandr"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.109.0"}
sqlalchemy = "^2.0.25"
alembic = "^1.13.1"
asyncpg = "^0.29.0"
aiohttp = "^3.9.3"
aiokafka = "^0.10.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.0"
pytest-asyncio = "^0.23.4"
pytest-mock = "^3.12.0"
schemathesis = "^3.24.3"
faker = "^23.1.0"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
pythonpath = [
    ".", "src",
]
asyncio_mode="auto"
